src/components/Project_component/Project_component.css
.container {
  width: 100%;
  height: auto;
  display: flex;
  flex-direction: column;
}

.rowelement {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
}

.colelement {
  height: auto;
}

.element {
  height: auto;
  margin: 0;
  padding: 20px !important;
}

.child {
  height: 10px;
  border-radius: 5px;
  height: auto;
}

.childimg {
  object-fit: fill;
  width: 100%;
  height: 100%;
  border-radius: inherit;
}

.addButton {
  width: 100%;
  height: 150px;
  padding: 20px 20px;
}

.addButton:hover {
  transform: scale(1.01);
  cursor: pointer;
}

.addButtonInner {
  width: 100%;
  height: 100%;
  border: solid black 1px;
  border-radius: 50px;
  transition: ease 0.3s;
  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.6);
}

.addButtonInner:hover {
  .addRowButton {
    background: linear-gradient(70deg, #ff0000, #ff7f00, #ffff00, lightgreen, #0000ff);
  }
}

.addRowButton {
  position: relative;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 50px;
  height: 50px;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 50%;
  background-color: white;
}

.editMenu {
  position: relative;
  background: linear-gradient(20deg, #e0dfdf, #e1dac6);
  bottom: 0;
  height: 0;
  width: 100%;
  overflow: hidden;
  transition: height 0.3s ease;
}

.editMenu.open {
  height: auto;
}

.newimageelement {
  display: flex;
  align-items: center;
  justify-content: center;
  background: url('/addImage.jpg') no-repeat center center;
  background-size: cover;
  border-radius: 20px;
  font-size: 20px;
  transition: transform 0.3s ease;
}

/* Für kleine Bildschirme (z.B. XS, SM) */
@media (max-width: 500px) {
  .newimageelement {
    width: 100%; /* Überschreibt die pixelweise Breite */
    height: auto !important; /* Höhe passt sich automatisch an */
    aspect-ratio: 8 / 12; /* Oder ein anderes gewünschtes Verhältnis */
    background-size: cover !important; /* Sicherstellen, dass das Bild immer das Containerfeld füllt */
  }
  .child,
  .newimageelementContainer {
    padding: 0px !important;
  }
  .caption {
    text-align: left !important;
  }
  .element {
    padding: 10px !important;
  }
  .rowelement {
    flex-wrap: wrap;
  }
}

.newimageelement:hover {
  cursor: pointer;
  transform: scale(1.02);
}

.delete-button,
.edit-button {
  transition: transform 0.1s ease;
}

.delete-button:hover,
.edit-button:hover {
  cursor: pointer;
  transform: scale(1.2);
}

